[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tile.gd" type="Script" id=1]
[ext_resource path="res://demoOne/Label.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="Tile" type="Panel"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 20, 20 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 40.0
align = 1
valign = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.625, 0.625 )
centered = false
region_enabled = true

[connection signal="gui_input" from="." to="." method="_on_Tile_gui_input"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
